[package]
name = "digital-garden"
version = "0.1.0"
authors = ["bbell"]
edition = "2018"

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "digital_garden"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.5.10"
directories = "3.0.1"
edit = "0.1.3"
structopt = "0.3.21"

[dev-dependencies]
assert_cmd = "1.0.3"
